Fix double scroll bar issue

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ footer {
 /* intro */
 main { /* responsive */
     padding: 0 22%;
-    overflow: auto;
+    overflow: visible;
 }
 
 h1, h2, h3, h4, h5, h6 {
